# Scripts

Crypto/: getPriceAdaArs.sh  getPriceAdaUsd.sh  getPriceBtcArs.sh  getPriceBtcUsd.sh  getPriceUsdArs.sh  getPriceXmrUsd.sh  getRateSxPriceBtc.sh
FFmpeg/: ffmpeg_to_theora_1pass.sh  ffmpeg_to_webm_1pass.sh  ffmpeg_to_webm_2pass.sh  ffmpeg_to_x264_1pass.sh  ffmpeg_to_x265_1pass.sh  ffscreengrab.sh  vid_preview.sh
Gentoo/: remerge.sh
Hexchat/: audacious-hexchat.py  audacious-xchat.py  clementine-hexchat.py  clementine-xchat.py  hexchat_mpv.py  rhythmbox-hexchat.py
Qemu/: qemu-bash-create  qemu-bash-init-x86  qemu-bash-init-x86_64
Utils/: automounter-sshfs  cbr2cbz.sh  checkIpAddress.sh  checkOnlineStatus.sh  chrome-wasm  fileopen_system.sh  folder-compress  meminfo-openbsd.sh  mpdinfo.sh  proc_user_active.sh  randWallpaper.sh  randr-monitors  scanhome.sh  setRandomWallpaper.sh  sshfs-automounter  stream-mode-control  update-hosts-root.sh  update-hosts.sh  vpnControl.sh  wg-quick-converter  wireguard-control  wireguard-control-freebsd  wireguard-control-openbsd  xrdp-connect-windows.sh
Utils/Cloudflare/: cf_config.json.example  cloudflareBlock.py
Weechat/: audacious.pl  mpd.py
ffmpeg_master/: README.md  main.py  pyproject.toml
ffmpeg_master/src/core/: engine.py  hardware.py  progress.py
